[package]
name = "keyrate"
version = "0.1.0"
authors = ["skippi <jbtcao@gmail.com>"]
edition = "2018"
description = "Configure keyboard repeat rate and delay time for Windows 10."

[dependencies]
structopt = "0.3.14"

[dependencies.winapi]
version = "0.3.8"
features = ["winuser", "minwindef", "errhandlingapi"]

